webapp/src/css/old-nav.less
.app-root.old-nav {
  .content .page {
    padding-left: 0;
    top: @old-nav-top-desktop-height;
  }

  &.about .content .inner .page {
    padding-top: 0;
  }

  &.trainings {
    .content .inner .page {
      padding-top: 0;
      padding-left: 0;
      top: @top-without-filter;
    }

    .tool-bar .inner {
      background-color: @top-header-color;
    }
  }

  .app-menu-button {
    display: none;
  }

  &.messages {
    .header .tabs .selected {
      background-color: @messages-color;
    }
  }

  &.tasks {
    .header .tabs .selected {
      background-color: @tasks-color;
    }
  }

  &.reports {
    .header .tabs .selected {
      background-color: @reports-color;
    }
  }

  &.analytics {
    .header .tabs .selected {
      background-color: @analytics-color;
    }
  }

  &.contacts {
    .header .tabs .selected {
      background-color: @contacts-color;
    }
  }

  &.user {
    .header .tabs .selected {
      background-color: @admin-color;
    }
  }

  &.error,
  &.testing {
    .header .tabs .selected {
      background-color: @error-color;
    }
  }

  &.about,
  &.testing,
  &.privacy-policy,
  &.user {
    .tool-bar {
      height: 0;
    }

    .header .tabs .selected {
      background-color: @messages-color;
    }

    .content {
      .page {
        top: @top-without-filter;
        padding-left: 15px;
        padding-top: 15px;
      }
    }
  }

  &.error .page {
    padding-left: 15px;
  }

  .header {
    background-color: @top-header-color;
    text-align: center;
    position: relative;
    display: block;
    padding-top: 5px;
    .inner {
      height: @top-navbar-height;
    }

    .logo {
      float: left;
      opacity: 0.9;
      padding: 2px 10px;
      img {
        height: 50px;
      }
    }

    .mm-icon {
      margin: 0 auto;

      .mm-badge-overlay {
        right: 15px;
      }

      :before {
        font-size: @font-XXL;
      }
    }

    a {
      .button-text-inverse(@nav-icon-gray);
      outline: 0;
      padding-top: 6px;

      &:hover, &:active, &:focus {
        text-decoration: none;
      }
    }

    .tabs {
      .button-label {
        color: @button-text-inverse-color;
      }

      a {
        border-radius: 10px 10px 0 0;
        cursor: pointer;
        min-width: 80px;
        padding-left: 5px;
        padding-right: 5px;

        .mm-icon {
          display: block;
          svg,
          span:not(.mm-badge-overlay):not(.mm-badge),
          img {
            &, &:before {
              height: 24px;
              max-width: 24px;
            }
          }
        }

        .button-label {
          font-size: @font-small;
          color: @button-text-inverse-color;
        }

        &.selected {
          .button-label,
          .mm-icon:hover,
          .resource-icon {
            .button-text;
          }
        }
      }
    }

    .extras {
      float: right;
      padding-right: 5px;
      a {
        width: @header-bar-extras;
        margin-top: 10px;
        border-radius: @radius-size @radius-size 0 0;
        .mm-icon {
          width: inherit;
        }
      }

      .dropdown-menu a {
        border-radius: 0;
      }

      .open > a {
        background-color: @white;
        .mm-icon {
          color: @top-header-color;
        }
      }
    }

    .extras,
    .tabs {
      height: 100%;
      a {
        height: 100%;
        display: inline-block;
      }
    }

    .dropdown ul a {
      width: 100%;
      height: auto;
    }

    .dropdown.options.open.show {
      display: inline !important; // Overriding BS' "display" that uses !important;
    }

    .options .dropdown-menu {
      width: @header-dropdown-width;
      top: 0 !important; // Overriding element.style
      left: calc(-1 * (@header-dropdown-width - @header-bar-extras)) !important; // Overriding element.style
      margin-top: 30px;
      font-size: 0;

      a {
        text-shadow: none;
        padding: 10px 20px;
        color: @gray-ultra-darker;
        margin-top: 0;
        white-space: normal;
        font-size: @font-medium;
      }

      .nav-icon {
        display: inline-block;
        width: @icon-extra-small;
        height: @icon-extra-small;

        img,
        svg {
          width: 100%;
          height: 100%;
        }
      }

      .disabled a {
        color: @gray-disabled;
      }

      .divider {
        margin: 0;
      }

      .sync-status {
        margin-top: 10px;
        margin-bottom: 10px;

        a {
          padding-top: 0;
          padding-bottom: 0;
          color: @label-color;

          &:hover {
            background-color: transparent;
            cursor: default;
          }
        }

        .success {
          color: @ok-color;
        }

        .required {
          color: @error-color;
        }
      }
    }
  }

  .mm-icon {
    &, &:focus {
      .button-text;
    }

    &:hover, &.active {
      .button-text-hover;
    }
  }

  .mm-icon-inverse {
    &, &:focus {
      .button-text-inverse;
    }
  }

  .loading-status {
    margin: 10px;
  }

  .tool-bar {
    height: @old-nav-filters-bar-height;

    .inner {
      height: @toolbar-mobile-height;

      .ellipsis-title {
        display: none;
      }

      mm-search-bar {
        padding-left: 5px;
        max-width: initial;
        .fa {
          color: @gray-ultra-dark;
        }

        .mm-search-bar-container {
          justify-content: flex-end;
        }
      }
       mm-messages-more-menu {
        display: initial;
      }
    }
  }

  &.analytics .tool-bar .inner {
    display: initial;
  }

  mm-analytics-filters {
    .mm-dropdown {
      display: initial;
    }
  }

  .analytics-sidebar-filter {
    display: flex;
    align-items: center;
    height: @toolbar-mobile-height;
  }

  mm-navigation {
    display: none;
  }

  &.show-content {
    mm-navigation {
      display: flex;
      align-items: center;
    }

    .navigation .ellipsis-title {
      display: block;
    }
  }

  .mm-navigation-menu {
    display: block;
  }

  .powered-by {
    margin: 0;
  }

  .mm-badge-border {
    border: solid 1px @white;
    margin: 0;
  }
}

@media (max-width: @media-mobile) {
  .app-root.old-nav {
    &.about,
    &.testing,
    &.privacy-policy,
    &.user {
      .content {
        .page {
          top: calc(@top-navbar-height + 5px);
          margin: 0;
        }
      }
    }

    .header {
      background-color: @top-header-color;
      position: relative;
      .inner {
        display: flex;
        justify-content: space-between;
        width: 100vw;
        flex-direction: row-reverse;
        flex-wrap: nowrap;
      }

      .tabs {
        display: flex;
        justify-content: space-between;
        width: 100%;
        padding: 0 0 0 2px;
        a {
          min-width: 50px;
          .button-label {
            font-size: @font-XXXS;
          }
        }

        .mm-badge-overlay {
          right: 0;
          top: -9px;
        }

        .mm-badge-border {
          margin: 5px 0;
        }
      }

      .logo {
        display: none;
      }

      .dropdown-menu {
        margin: 30px 0 0 0;
        top: 8px;
        right: 5px;
      }

      .extras a {
        margin-top: 2px;
        .fa-bars {
          font-size: @font-XXL;
        }
      }

      #header-dropdown-link {
        padding-top: 6px;
      }
    }

    .tool-bar {
      height: @toolbar-mobile-height;

      .ellipsis-title {
        color: @text-normal-color;
      }
    }

    .content {
      .page {
        top: @old-nav-top-mobile-height;
        z-index: initial;
      }
    }

    .fast-action-trigger:not(.embed-fast-action) {
      bottom: 17px;
    }

    .targets .target:last-child {
      margin-bottom: 10px;
    }

    &.trainings.show-content .content .inner .page {
      top: @toolbar-mobile-height;
    }
  }

  #target-aggregates-list {
    &.inbox-items {
      padding-bottom: 0;
    }
  }
}

@media (max-width: @media-small-mobile) {
  .old-nav {
    .header {
      .tabs {
        a {
          min-width: 50px;
          .button-label {
            font-size: @font-XXXS;
          }
        }

        // Use bigger font when there are 4 or less tabs.
        .elements-label(a, button-label, 4, @font-extra-small);
      }

      .mm-badge-overlay-top {
        top: -8px;
      }

      .inner {
        height: @top-navbar-height;
      }
    }

    .targets .target:last-child {
      margin-bottom: 10px;
    }
  }
}

